[Feat] Conversion panier vers nouveau magasin